<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>
		<import type="android.view.View"/>
		<import type="com.herohiman.tournant.utils.Converter"/>
		<variable name="recipe" type="com.herohiman.tournant.data.Recipe" />
	</data>

	<androidx.core.widget.NestedScrollView
		android:id="@+id/recipe_detail_root"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/background_repeat"
		tools:context=".ui.RecipeActivity">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.google.android.flexbox.FlexboxLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingStart="16dp"
				android:paddingTop="16dp"
				app:flexWrap="wrap"
				app:flexDirection="row_reverse"
				app:alignItems="stretch"
				tools:ignore="RtlSymmetry">

				<com.google.android.material.card.MaterialCardView
					android:id="@+id/recipe_detail_image"
					android:layout_width="300dp"
					android:layout_height="wrap_content"
					app:layout_flexGrow="1"
					android:layout_marginEnd="16dp"
					android:layout_marginBottom="16dp"
					android:elevation="4dp"
					app:cardCornerRadius="8dp">

					<ImageView
						android:id="@+id/recipe_detail_image_drawable"
						android:importantForAccessibility="no"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:scaleType="fitCenter"
						android:adjustViewBounds="true"/>

				</com.google.android.material.card.MaterialCardView>

				<com.google.android.material.card.MaterialCardView
					android:layout_width="300dp"
					android:layout_height="wrap_content"
					app:layout_flexGrow="1"
					android:layout_marginEnd="16dp"
					android:layout_marginBottom="16dp"
					android:elevation="4dp"
					android:padding="8dp"
					app:cardCornerRadius="8dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:paddingHorizontal="20dp"
						android:paddingVertical="16dp"
						android:divider="@drawable/divider_vertical"
						android:showDividers="middle">

						<TextView
							android:id="@+id/recipe_detail_title"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@{recipe.title}"
							tools:text="@string/title"
							style="@style/h1"/>

						<TextView
							android:id="@+id/recipe_detail_description"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginTop="-4sp"
							android:text="@{recipe.description}"
							android:textColor="@color/subtitle_color"
							android:textSize="18sp"
							android:visibility="@{recipe.description != null ? View.VISIBLE : View.GONE}"
							tools:text="@string/description"/>

						<RatingBar
							android:id="@+id/recipe_detail_rating"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:numStars="5"
							android:isIndicator="true"
							android:rating="@{recipe.rating}"
							android:visibility="@{recipe.rating != null ? View.VISIBLE : View.GONE}"
							style="@style/Widget.AppCompat.RatingBar.Small"/>

						<com.google.android.material.chip.ChipGroup
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

							<com.google.android.material.chip.Chip
								android:id="@+id/recipe_detail_category"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:clickable="false"
								android:text="@{recipe.category}"
								android:textColor="@color/white"
								android:visibility="@{recipe.category != null ? View.VISIBLE : View.GONE}"/>

							<com.google.android.material.chip.Chip
								android:id="@+id/recipe_detail_cuisine"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:clickable="false"
								android:text="@{recipe.cuisine}"
								android:textColor="@color/white"
								android:visibility="@{recipe.cuisine != null ? View.VISIBLE : View.GONE}"/>

						</com.google.android.material.chip.ChipGroup>

						<androidx.compose.ui.platform.ComposeView
							android:id="@+id/recipe_detail_keywords"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"/>

						<LinearLayout
							android:id="@+id/recipe_detail_source"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="vertical"
							android:visibility="@{recipe.source != null ? View.VISIBLE : View.GONE}">

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/source"
								style="@style/h3"/>

							<TextView
								android:id="@+id/recipe_detail_source_text"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@{recipe.source}"
								android:textSize="@dimen/font_size_text"/>

						</LinearLayout>

						<LinearLayout
							android:id="@+id/recipe_detail_link"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="vertical"
							android:visibility="@{recipe.link != null ? View.VISIBLE : View.GONE}">

							<TextView
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/webpage"
								style="@style/h3"/>

							<TextView
								android:id="@+id/recipe_detail_link_text"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@{recipe.link}"
								android:textSize="@dimen/font_size_text"
								android:autoLink="all"/>

						</LinearLayout>

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal"
							android:baselineAligned="false">

							<LinearLayout
								android:id="@+id/recipe_detail_preptime"
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:orientation="vertical"
								android:visibility="@{recipe.preptime != null ? View.VISIBLE : View.GONE}">

								<TextView
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:text="@string/preptime"
									style="@style/h3"/>

								<TextView
									android:id="@+id/recipe_detail_preptime_text"
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:text="@{Converter.timeToString(recipe.preptime)}"
									android:textSize="@dimen/font_size_text"/>

							</LinearLayout>

							<LinearLayout
								android:id="@+id/recipe_detail_cooktime"
								android:layout_width="0dp"
								android:layout_weight="1"
								android:layout_height="wrap_content"
								android:orientation="vertical"
								android:visibility="@{recipe.cooktime != null ? View.VISIBLE : View.GONE}">

								<TextView
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:text="@string/cooktime"
									style="@style/h3"/>

								<TextView
									android:id="@+id/recipe_detail_cooktime_text"
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:text="@{Converter.timeToString(recipe.cooktime)}"
									android:textSize="@dimen/font_size_text"/>

							</LinearLayout>

						</LinearLayout>

						<androidx.compose.ui.platform.ComposeView
							android:id="@+id/recipe_detail_season"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"/>

					</LinearLayout>

				</com.google.android.material.card.MaterialCardView>

			</com.google.android.flexbox.FlexboxLayout>

			<androidx.compose.ui.platform.ComposeView
				android:id="@+id/recipe_detail_ingredients"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginBottom="16dp"/>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/recipe_detail_instructions"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginBottom="16dp"
				android:elevation="4dp"
				app:cardCornerRadius="8dp"
				android:visibility="gone"
				tools:visibility="visible">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingHorizontal="20dp"
					android:paddingVertical="16dp">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="4dp"
						android:layout_marginTop="-4dp"
						android:text="@string/instructions"
						style="@style/h2"/>

					<androidx.recyclerview.widget.RecyclerView
						android:id="@+id/recipe_detail_instructions_recycler"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginEnd="-4dp"
						android:nestedScrollingEnabled="false"
						app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

				</LinearLayout>

			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/recipe_detail_notes"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginBottom="16dp"
				android:elevation="4dp"
				app:cardCornerRadius="8dp"
				android:visibility="gone"
				tools:visibility="visible">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingHorizontal="20dp"
					android:paddingVertical="16dp">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="4dp"
						android:layout_marginTop="-4dp"
						android:text="@string/notes"
						style="@style/h2"/>

					<TextView
						android:id="@+id/recipe_detail_notes_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textSize="@dimen/font_size_text"/>

				</LinearLayout>

			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/recipe_detail_dependent_recipes"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginBottom="16dp"
				android:elevation="4dp"
				app:cardCornerRadius="8dp"
				android:visibility="gone"
				tools:visibility="visible">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:paddingHorizontal="20dp"
					android:paddingVertical="16dp">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginBottom="4dp"
						android:layout_marginTop="-4dp"
						android:text="@string/dependent_recipes"
						style="@style/h2"/>

					<TextView
						android:id="@+id/recipe_detail_dependent_recipes_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:lineSpacingExtra="4sp"
						android:textSize="@dimen/font_size_text"/>

				</LinearLayout>

			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/recipe_detail_preparations"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:layout_marginBottom="16dp"
				android:elevation="4dp"
				app:cardCornerRadius="8dp"
				android:visibility="gone"
				tools:visibility="visible">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal"
					android:gravity="center">

					<LinearLayout
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:orientation="vertical"
						android:paddingHorizontal="20dp"
						android:paddingVertical="16dp">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginBottom="4dp"
							android:layout_marginTop="-4dp"
							android:text="@string/logbook"
							style="@style/h2"/>

						<TextView
							android:id="@+id/recipe_detail_preparations_count"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:textSize="@dimen/font_size_text"/>

						<TextView
							android:id="@+id/recipe_detail_preparations_time"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:textSize="@dimen/font_size_text"/>

					</LinearLayout>

					<ImageView
						android:layout_width="32dp"
						android:layout_height="96dp"
						android:layout_marginEnd="8dp"
						android:src="@drawable/ic_arrow"
						android:scaleType="fitXY"
						android:importantForAccessibility="no"
						app:tint="@color/checked_text_color"/>

				</LinearLayout>

			</com.google.android.material.card.MaterialCardView>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:baselineAligned="false"
				android:orientation="horizontal"
				android:layout_marginHorizontal="16dp"
				android:layout_marginBottom="16dp"
				android:paddingHorizontal="12dp">

				<LinearLayout
					android:id="@+id/recipe_detail_created"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="vertical"
					android:visibility="gone">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/created"
						android:textStyle="bold"/>

					<TextView
						android:id="@+id/recipe_detail_created_date"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>

				</LinearLayout>

				<LinearLayout
					android:id="@+id/recipe_detail_modified"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="vertical"
					android:visibility="gone">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/modified"
						android:textStyle="bold"/>

					<TextView
						android:id="@+id/recipe_detail_modified_date"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>

				</LinearLayout>

			</LinearLayout>

		</LinearLayout>

	</androidx.core.widget.NestedScrollView>

</layout>