...
	<string name="gourmand165">Floating point numbers as yield value (Gourmand issue #165)</string>

	<!-- Options menu -->
	<string name="new_recipe">New recipe</string>
	<string name="import_recipes">Import recipes</string>
	<string name="refresh">Refresh</string>
	<string name="settings">Settings</string>
	<string name="about_app_name">About %s</string>

	<!-- Recipe options menu -->
	<string name="share">Share</string>

	<!-- Action mode menu -->
...
	<string name="issues">Bug tracker</string>
	<string name="translations">Translations</string>
	<string name="donate">Donate</string>
	<string name="libraries">Libraries</string>

	<!-- Search -->
	<string name="search">Search</string>
	<string name="type_or_tap_to_search">Type or tap to search…</string>

	<!-- General purpose -->
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="done">Done</string>
...
	<string name="to">to</string>
	<string name="from">from</string>
	<string name="until">until</string>
	<string name="weigh">Weigh</string>

	<!-- Editing -->
	<string name="edit">Edit</string>
	<string name="save">Save</string>
	<string name="preview">Preview</string>
	<string name="add_photo">Add photo</string>
	<string name="remove_photo">Remove photo</string>
	<string name="unset_rating">Unset rating</string>
	<string name="make_optional">Make optional</string>
...
